# anywaydata-ai-testing

./: .gitignore  AGENTS.md  README.md  ai-review-goal.md  vibe-test.md
.githooks/: pre-commit
.github/workflows/: git-safety.yml
docs/testing/20260620/issue-226-001/: README.md  issue-226-test-log.md  issue-226-test-report.md  original-session-prompt.md
docs/testing/20260620/issue-226-002/: README.md  command-coverage-test-log.md  docs-consistency-test-log.md  issue-226-second-session-defects-report.md  issue-226-second-session-test-log.md  issue-226-second-session-test-report.md  negative-validation-test-log.md  responsive-accessibility-test-log.md  test-logs.md  ux-regression-test-log.md
docs/testing/20260620/issue-226-003/: README.md  command-coverage-test-log.md  docs-consistency-test-log.md  issue-226-second-session-goal-prompt.md  issue-226-third-session-defects-report.md  issue-226-third-session-goal-prompt.md  issue-226-third-session-test-log.md  issue-226-third-session-test-report.md  negative-validation-test-log.md  responsive-accessibility-test-log.md  ux-regression-test-log.md
docs/testing/20260621/issue-233-001/: README.md  command-coverage-test-log.md  cross-surface-root-links-test-log.md  docs-consistency-test-log.md  issue-233-test-log.md  (+6 more)
experiments/vibe-test/: README.md  pyproject.toml
experiments/vibe-test/vibe_test_codex/: __init__.py  cli.py  llm_client.py  mcp_server.py  models.py  playwright_cli.py  runner.py
experiments/vibe-test/vibe_test_codex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+516 files in other folders)
